WritableMap float support on Android